--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,38 @@
 /* Your CSS code here */
+
+/* Banner */
+.banner{
+    background-color: black;
+    position: relative;
+    text-align: center;
+}
+
+.banner img{
+    opacity: 50%;
+}
+
+.flowerTitle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: larger;
+    color: antiquewhite;
+  }
+
+/* FlowerMenu */
+#features{
+    padding: 7% 5%;
+    position: relative;
+}
+
+.feature-p{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+}
+
+.feature-i{
+    height: 4rem;
+    padding-right: 5%;
+}
