--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,43 @@
 /* Your CSS code here */
+
+.intro{
+    background-image: url(../images/flowershop.jpg);
+    height:720px;  
+}
+
+.background{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(32, 32, 31, 0.7);
+}
+
+h1{
+    color: white;
+    font-size: 50px;
+    position: absolute;
+    top: 25%;  
+    left: 50%; 
+    transform: translate(-50%, -25%);
+}
+
+button{
+    color: white;
+    background-color: rgb(113, 211, 178);
+    border-radius: 346px ;
+    border:rgb(113, 211, 178);
+    font-size: 30px;
+
+    position: absolute;
+    top: 35%;  
+    left: 50%; 
+    transform: translate(-50%, -35%);
+}
+
+.info{
+background-color:rgb(166, 195, 185);
+height: 500px;
+display: flex;
+align-items: center;
+justify-content: space-evenly;
+align-content: center;
+}
