--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,33 @@
 /* Your CSS code here */
+* {
+  margin: 0;
+}
+.banner {
+  filter: brightness(30%);
+  width: 100%;
+  background-blend-mode: overlay;
+  z-index: 1;
+}
+.icon {
+  width: 50px;
+  float: left;
+}
+.green-bg {
+  width: 100%;
+  height: 300px;
+  background-color: darkseagreen;
+}
+.btn-learn {
+  position: absolute;
+  background-color: chartreuse;
+  border-radius: 20px;
+  margin-top: -20vh;
+}
+.title {
+  margin-top: -60vh;
+  z-index: 2;
+}
+.container-info{
+  background-color: #cee7b4;
+  height: 300px;
+}
