--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,39 @@
 /* Your CSS code here */
+.imgContainer {
+    position:relative;
+    display:inline-block;
+    text-align:center;
+    
+}
+.main-img{
+    filter: brightness(50%);
+}
+.heading1{
+    position: absolute;
+    top: 35%;
+    left: 40%;
+    color: white;
+}
+
+.button {
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    background-color: #7ed320;
+    padding: 5px 15px;
+    border-radius: 25px;
+}
+
+.bottomSection{
+    background-color:#cee7b4;
+    height: 800px;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+    align-content: center;
+    } 
+
+
