--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,42 @@
 /* Your CSS code here */
+.jumbotron {
+    position: relative;
+}
+
+.flower-img {
+    width: 100%;
+}
+
+.flower-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+    color: white;
+    text-align: center;
+}
+
+.learn-button {
+    font-size: 25px;
+    color: white;
+    border-radius: 25px;
+    background: #73ad21;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+}
+
+.four-icons {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background-color: rgba(68, 255, 47, 0.613);;
+}
+
+.icon {
+    padding: 2rem 0rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
