--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,41 @@
-/* Your CSS code here */
+* {
+    margin: 0;
+    padding: 0;
+}
+.mast {
+    background-size: cover;
+    min-height: 70vh;
+    position: relative;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.mastfoot {
+    background-color: #7cd688;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+p {
+    padding: 10px;
+}
+
+@media (max-width: 768px) {
+    .mast {
+        min-height: 50vh;
+    }
+    h1 {
+        font-size: calc(1rem + 3vw);
+    }
+}
