--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,30 @@
 /* Your CSS code here */
+.hero {
+    background-image: url("../images/flowershop.jpg");
+    background-color:grey;
+    color:white;
+    font-family: system-ui;
+    background-size: cover;
+    background-blend-mode: multiply;
+    padding-top: 12.5rem; /* 200px */
+    padding-bottom: 12.5rem; /* 200px */
+    /* background-repeat: no-repeat; */
+}
+
+.text_1 {
+    font-size: 3rem;
+    text-align: center;
+}
+
+.simple_button {
+    color:white;
+    background-color:rgb(121, 252, 119); 
+    border-color:rgb(121, 252, 119);
+    font-family: system-ui;
+    text-align: center;
+    font-size: 1.563rem; /* 25 px */
+    border-radius: 1.25rem; /* 20 px */
+    padding: 6px;
+    position: relative;
+    margin: auto 39.375rem;
+}
